--- a/docs/tutorials/AddRemark.adoc
+++ b/docs/tutorials/AddRemark.adoc
@@ -36,7 +36,7 @@ We accomplish that by returning a `CommandResult` with an accompanying message.
 .RemarkCommand.java
 [source, java]
 ----
-package seedu.address.seedu.algobase.commands;
+package seedu.address.logic.commands;
 
 import seedu.address.model.Model;
 
