--- a/docs/tutorials/AddRemark.adoc
+++ b/docs/tutorials/AddRemark.adoc
@@ -41,7 +41,7 @@ package seedu.address.logic.commands;
 import seedu.address.model.Model;
 
 /**
- * Changes the remark of an existing person in the address book.
+ * Changes the remark of an existing note in the address book.
  */
 public class RemarkCommand extends Command {
 
@@ -82,8 +82,8 @@ Following the convention in other commands, we add relevant messages as constant
 .RemarkCommand.java
 [source, java]
 ----
-    public static final String MESSAGE_USAGE = COMMAND_WORD + ": Edits the remark of the person identified "
-            + "by the index number used in the last person listing. "
+    public static final String MESSAGE_USAGE = COMMAND_WORD + ": Edits the remark of the note identified "
+            + "by the index number used in the last note listing. "
             + "Existing remark will be overwritten by the input.\n"
             + "Parameters: INDEX (must be a positive integer) "
             + "r/ [REMARK]\n"
@@ -120,8 +120,8 @@ public class RemarkCommand extends Command {
     private final String remark;
 
     /**
-     * @param index of the person in the filtered person list to edit the remark
-     * @param remark of the person to be updated to
+     * @param index of the note in the filtered note list to edit the remark
+     * @param remark of the note to be updated to
      */
     public RemarkCommand(Index index, String remark) {
         requireAllNonNull(index, remark);
@@ -246,12 +246,12 @@ If you are stuck, check out the sample link:https://github.com/nus-cs2103-AY1920
 
 Now that we have all the information that we need, let's lay the groundwork for some _persistent_ changes.
 We achieve that by working with the `Person` model.
-Each field in a Person is implemented as a separate class (e.g. a `Name` object represents the person's name).
-That means we should add a `Remark` class so that we can use a `Remark` object to represent a remark given to a person.
+Each field in a Person is implemented as a separate class (e.g. a `Name` object represents the note's name).
+That means we should add a `Remark` class so that we can use a `Remark` object to represent a remark given to a note.
 
 === Add a new `Remark` class
 
-Create a new `Remark` in `seedu.address.model.person`. Since a `Remark` is a field that is similar to `Address`, we can reuse a significant bit of code.
+Create a new `Remark` in `seedu.address.model.note`. Since a `Remark` is a field that is similar to `Address`, we can reuse a significant bit of code.
 
 A copy-paste and search-replace later, you should have something like link:https://github.com/nus-cs2103-AY1920S1/addressbook-level3/commit/b7a47c50c8e5f0430d343a23d2863446b6ce9298#diff-af2f075d24dfcd333876f0fbce321f25[this].
 Note how `Remark` has no constrains and thus does not require input validation.
@@ -263,7 +263,7 @@ These should be relatively simple changes.
 
 == Add a placeholder element for remark to the UI
 
-Without getting too deep into `fxml`, let's go on a 5 minute adventure to get some placeholder text to show up for each person.
+Without getting too deep into `fxml`, let's go on a 5 minute adventure to get some placeholder text to show up for each note.
 
 Simply add
 [source, java]
@@ -326,9 +326,9 @@ Just add link:https://github.com/nus-cs2103-AY1920S1/addressbook-level3/commit/5
 [source, java]
 .PersonCard.java
 ----
-public PersonCard(Person person, int displayedIndex) {
+public PersonCard(Person note, int displayedIndex) {
     //...
-    remark.setText(person.getRemark().value);
+    remark.setText(note.getRemark().value);
 }
 ----
 
@@ -361,13 +361,13 @@ Since all fields in a `Person` are immutable, we create a new instance of a `Per
         }
 
         Person personToEdit = lastShownList.get(index.getZeroBased());
-        Person editedPerson = new Person(personToEdit.getName(), personToEdit.getPhone(), personToEdit.getEmail(),
+        Person editedNote = new Person(personToEdit.getName(), personToEdit.getPhone(), personToEdit.getEmail(),
                 personToEdit.getAddress(), remark, personToEdit.getTags());
 
-        model.setPerson(personToEdit, editedPerson);
+        model.setPerson(personToEdit, editedNote);
         model.updateFilteredPersonList(PREDICATE_SHOW_ALL_PERSONS);
 
-        return new CommandResult(generateSuccessMessage(editedPerson));
+        return new CommandResult(generateSuccessMessage(editedNote));
     }
 
     /**
