--- a/docs/tutorials/TracingCode.adoc
+++ b/docs/tutorials/TracingCode.adoc
@@ -180,13 +180,13 @@ image::LogicSequenceDiagram.png[]
 public CommandResult execute(Model model) throws CommandException {
     ...
     Person personToEdit = lastShownList.get(index.getZeroBased());
-    Person editedPerson = createEditedPerson(personToEdit, editPersonDescriptor);
-    if (!personToEdit.isSamePerson(editedPerson) && model.hasPerson(editedPerson)) {
+    Person editedNote = createEditedPerson(personToEdit, editPersonDescriptor);
+    if (!personToEdit.isSamePerson(editedNote) && model.hasPerson(editedNote)) {
         throw new CommandException(MESSAGE_DUPLICATE_PERSON);
     }
-    model.setPerson(personToEdit, editedPerson);
+    model.setPerson(personToEdit, editedNote);
     model.updateFilteredPersonList(PREDICATE_SHOW_ALL_PERSONS);
-    return new CommandResult(String.format(MESSAGE_EDIT_PERSON_SUCCESS, editedPerson));
+    return new CommandResult(String.format(MESSAGE_EDIT_PERSON_SUCCESS, editedNote));
 }
 ----
 . As suspected, `command#execute()` does indeed make changes to `model`.
@@ -205,7 +205,7 @@ constructor.
  * {@code JsonSerializableAddressBook}.
  */
 public JsonSerializableAddressBook(ReadOnlyAddressBook source) {
-    persons.addAll(
+    notes.addAll(
         source.getPersonList()
               .stream()
               .map(JsonAdaptedPerson::new)
