--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -379,7 +379,7 @@ this autotag. E.g. no bookmarks will match the conditions `u/github.com/mark
 nu/github.com/mark`
 * `PARTIAL_URL` and `NOT_PARTIAL_URL` can be any part of a URL. E.g.
  `youtube`, `.nus.edu.sg`, or `github.com/mark`.
-* `NOT_NAME`, `NOT_PARTIAL_URL`, `NOT_FOLDER`, and `NOT_TAG` are partial URLs, folders,
+* `NOT_NAME`, `NOT_PARTIAL_URL`, `NOT_FOLDER`, and `NOT_TAG` are names, partial URLs, folders,
 or tags that bookmarks to be tagged should *not* match.
 * The tag `TAG_NAME` is still a normal tag. E.g. if an autotag `YouTube` matches
 bookmarks with URLs containing `youtube.com`, other bookmarks can still be
