--- a/docs/team/HoHolYin.adoc
+++ b/docs/team/HoHolYin.adoc
@@ -31,7 +31,7 @@ image::Ui.png[width="150", align="center"]
 *** We require all books to have a unique serial number tagged to it
 *** We allow librarians to assign books any custom serial number that is valid to a new book addition should they wish so.
 *** We want all input commands to return results in less than 1 second
-** Credits: This feature is adapted from the 'add person' feature from Address Book 3, but there are many changes to it to allow books to be loaned or tagged with a unique serial number, for instance.
+** Credits: This feature is adapted from the 'add person' feature from Address Book 3, but there are many changes to it to allow books to, for example, be loaned or tagged with a unique serial number.
 
 * *Minor enhancement*: added a history command that allows the user to navigate to previous commands using up/down keys.
 
