Minor style edit for user guide

--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -114,53 +114,53 @@ A way for the user to beautify the appearance for the contact list. _e.g. Puttin
 
 Gives you an overview of when you will be free to travel and recommends when will be a suitable time to travel.
 
-==== Adding a commitment: ``addCommitment``
+** Adding a commitment: ``addCommitment`` **
 Adds commitment to indicate that you won’t be able to travel on a day or over a period of time due to commitments during the public holidays/school vacation. +
 Format: ``addCommitment [date] [name] <details of commitment>``
 
-==== Adding a public holiday: ``addHoliday``
+** Adding a public holiday: ``addHoliday`` **
 Adds a public holiday to your calendar so that you can view any upcoming public holidays easily. +
 Format: ``addHoliday [date] [name of holiday]``
 
-==== Adding a school break: ``addSchoolBreak``
+** Adding a school break: ``addSchoolBreak`` **
 Adds a school break to your calendar so that you can view when your school breaks are easily. +
 Format: ``addSchoolBreak [date] [name of break]`` or ``addSchoolBreak [start date] [end date] [name of break]``
 
-==== Adding a trip: ``addTrip``
+** Adding a trip: ``addTrip`` **
 Adds your trip to the calendar. Now, you can keep track of your trip with ease. +
 Format: ``addTrip [date] [name of trip]`` or ``addSchoolBreak [start date] [end date] [name of trip]``
 
-==== Checking your availability for a trip: ``check``
+** Checking your availability for a trip: ``check`` **
 Checks whether you would be able to travel on a specified date/for a specified period of time. +
 Format: ``check [date]`` or ``check [start date] [end date]``
 
-==== Clearing all commitments for a particular date: ``clearAll``
+** Clearing all commitments for a particular date: ``clearAll`` **
 Clears all of your commitments for a particular date. +
 Format: ``clearAll [date]``
 
-==== Editing your school break: ``editSchoolBreak``
+** Editing your school break: ``editSchoolBreak`` **
 Edits either the start or end date of your school break.
 Format: ``editSchoolBreak [original start date] [name] [original end date] [new start date] [new end date]``
 
-==== Editing your commitment: ``editCommitment``
+** Editing your commitment: ``editCommitment`` **
 Edits your commitment. You may change the date and/or details of your commitment.
 Format: ``editCommitment [original date] [name] <new date> <new details>``
 
-==== Removing a commitment: ``removeCommitment``
+** Removing a commitment: ``removeCommitment``**
 Removes your commitment, as specified by the name and date of your commitment. +
 Format: ``removeCommitment [date] [name]``
 
-==== Removing a school break: ``deleteSchoolBreak``
+** Removing a school break: ``deleteSchoolBreak`` **
 Removes a school break from your calendar. +
 Format: ``removeSchoolBreak [date] [name]`` or ``removeSchoolBreak [start date] [end date] [name]``
 
-==== Removing a public holiday: ``deleteHoliday``
+** Removing a public holiday: ``deleteHoliday`` **
 Removes a school break from your calendar. +
 Format: ``removeHoliday [date] [name]``
 
-==== Suggesting a period of time to travel: ``suggest``
+** Suggesting a period of time to travel: ``suggest``**
 Suggests when you can travel for a specified number of days within a time frame (as determined by the start and end dates). +
-Format: ``suggest [start date] [end date] [number of days]
+Format: ``suggest [start date] [end date] [number of days]``
 
 The event planner feature also provides  certain extra extensions.  +
 _(Extensions the group may want to consider)_
