--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -1,4 +1,4 @@
-= AddressBook Level 3 - Developer Guide
+= VISIT - Developer Guide
 :site-section: DeveloperGuide
 :toc:
 :toc-title:
@@ -14,7 +14,7 @@ ifdef::env-github[]
 endif::[]
 :repoURL: https://github.com/AY1920S1-CS2103T-F12-2/main
 
-By: `Team UnrealUnity`  	Since: `Sept 2019`  	Licence: `MIT`
+By: `Team UnrealUnity`  	Since: `Sep 2019`  	Licence: `MIT`
 
 == Setting up
 
